[package]
name = "revaultd"
version = "0.0.2"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/revault/revaultd"
license-file = "LICENCE"
keywords = ["revault", "bitcoin", "vault"]
description = "Revault wallet daemon"
exclude = [".github/"]


[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "revaultd"
path = "src/daemon/main.rs"

[[bin]]
name = "revault-cli"
path = "src/cli/main.rs"


[dependencies]
revault_tx = { version = "0.3", features = ["use-serde"] }
revault_net = { version = "0.1" }

# Don't reinvent the wheel
dirs = "3.0"

# It's concise, does the Right Thing, and even supports Windows !
daemonize-simple = "0.1"

# To talk to bitcoind
jsonrpc = "0.12"

# We use it for the cookie file
base64 = "0.13"

# We us TOML for the config and JSON for connections
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = { version = "1.0", features = ["raw_value"] }

# Logging stuff
log = "0.4"
fern = "0.6"

# DB stuff
rusqlite = { version = "0.24", features = ["bundled", "unlock_notify"] }

# For umask..
libc = "0.2.80"

# For the JSONRPC server
jsonrpc-core = "15.1"
jsonrpc-derive = "15.1"
[target.'cfg(not(windows))'.dependencies]
mio = { version = "0.7", features = ["default", "os-poll", "os-util", "uds"] }
[target.'cfg(windows)'.dependencies]
uds_windows = "1.0"
