[package]
name = "revaultd"
version = "0.0.3"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/revault/revaultd"
license-file = "LICENCE"
keywords = ["revault", "bitcoin", "vault"]
description = "Revault wallet daemon"
exclude = [".github/"]

[[bin]]
name = "revaultd"
path = "src/bin/daemon.rs"

[[bin]]
name = "revault-cli"
path = "src/bin/cli.rs"

[features]
bench = []

[dependencies]
revault_tx = { git = "https://github.com/revault/revault_tx", features = ["use-serde"] }
revault_net = { git = "https://github.com/revault/revault_net" }

# In order to have a backtrace on panic, because the 
# stdlib does not have a programmatic interface yet 
# to work with our custom panic hook.
backtrace = "0.3"

# Don't reinvent the wheel
dirs = "3.0"

# It's concise, does the Right Thing, and even supports Windows !
daemonize-simple = "0.1"

# To talk to bitcoind
jsonrpc = "0.12"

# We use it for the cookie file
base64 = "0.13"

# We use TOML for the config and JSON for connections
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
serde_json = { version = "1.0", features = ["raw_value"] }

# Logging stuff
log = "0.4"
fern = "0.6"

# DB stuff
rusqlite = { version = "0.26.3", features = ["bundled", "unlock_notify"] }

# For umask..
libc = "0.2.80"

# For the JSONRPC server
jsonrpc-core = "15.1"
jsonrpc-derive = "15.1"
[target.'cfg(not(windows))'.dependencies]
mio = { version = "0.7", features = ["default", "os-poll", "os-util", "uds"] }
[target.'cfg(windows)'.dependencies]
uds_windows = "1.0"
